# portfolio-example

./: README.md  _config.yml  pyproject.toml
1-hypertuning-gridsearch/: Conclusions.md  Report_liam_van_vliet.md  notebook.ipynb  summary.md
1-hypertuning-gridsearch/experiment_log/: journal.md
2-hypertuning-mlflow/: 04_experiments.ipynb  CNN_Regularization_Report.md  README.md  mlflow.db  notebook.ipynb
2-hypertuning-mlflow/experiment_log/: journal.md
2-hypertuning-mlflow/models/: 20250921-2333model.pt  20250921-2334model.pt
2-hypertuning-mlflow/models/20250921-233357/: model.toml  settings.toml
2-hypertuning-mlflow/models/20250922-013156/: settings.toml
2-hypertuning-mlflow/models/20250922-013232/: model.toml
3-hypertuning-rnn/: RNN_Gesture_Recognition_Final_Report.md  notebook.ipynb
4-hypertuning-ray/: analyze.py  hypertune.py  pyproject.toml  summary.md
5-deployment/: summary.md
5-deployment/matchagen/: .dockerignore  .env  .flake8  .gitignore  DESIGN_PLAN.md  Dockerfile  MATCHAGEN_DEPLOYMENT.md  MATCHAGEN_T5_PLAN.md  Makefile  PROJECT_JOURNAL.md  README.md  batch1_log.txt  batch1_rerun.txt  batch2_log.txt  batch3_log.txt  clean_data.py  docker-compose.yml  extract_from_logs.py  matchagen.toml  pyproject.toml  scrape_batch.py  training_log.txt
5-deployment/matchagen/backend/: Dockerfile  app.py  requirements.txt  utils.py
5-deployment/matchagen/frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
5-deployment/matchagen/frontend/src/: App.jsx
5-deployment/matchagen/frontend/src/components/: AmbientParticles.jsx  MissionControl.jsx  Pantry.jsx  RecipeCard.jsx
5-deployment/matchagen/frontend_legacy/: Dockerfile  nginx.conf
5-deployment/matchagen/frontend_legacy/static/: index.html  style.css
5-deployment/matchagen/src/matchagen/: __init__.py  custom_logger.py  datatools.py  main.py  models.py
7-ethics/: summary.md
