[project]
name = "portfolio-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "mads-datasets[torch]>=0.3.14",
    "mltrainer>=0.2.5",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
    "tomlserializer>=0.2.0",
    "mlflow>=3.0.0",
    "loguru>=0.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "torchinfo>=1.8.0",
]

[dependency-groups]
dev = [
    "notebooktester>=0.2.1",
    "ruff>=0.12.11",
]
