[project]
name = "hypertuning-project"
version = "0.1.0"
description = "Hyperparameter tuning exercise for image classification"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ray[tune]>=2.0.0",
    "mlflow>=2.8.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "loguru>=0.7.0",
    "plotly>=5.14.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "filelock>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
